# NevisBackend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260425_0001_enable_extensions.py  20260425_0002_create_domain_tables.py
app/: __init__.py  main.py
app/api/: dependencies.py
app/api/routes/: clients.py  documents.py  health.py  search.py
app/core/: config.py  errors.py  logging.py
app/db/: __init__.py  session.py
app/models/: __init__.py  client.py  document.py  document_chunk.py
app/repositories/: clients.py  documents.py  search.py
app/schemas/: clients.py  documents.py  health.py  search.py
app/search/: __init__.py  normalizer.py  query_analyzer.py  scoring.py  synonym_expander.py  types.py
app/services/: chunking_service.py  clients.py  documents.py  embedding_service.py  search.py  summary_service.py
docs/adr/: 001-hybrid-search.md
scripts/: seed_demo.py
tests/integration/: conftest.py  test_clients_api.py  test_documents_api.py  test_search_api.py  test_search_relevance_snapshot.py  test_search_retrieval.py
tests/unit/: test_chunking_service.py  test_document_service.py  test_embedding_service.py  test_health.py  test_models.py  test_openapi.py  test_search_core.py  test_settings.py  test_summary_service.py
