[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "nevis-search-api"
version = "0.1.0"
description = "Simplified WealthTech Search API for advisors."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic>=1.13",
    "asyncpg>=0.29",
    "fastapi>=0.115",
    "httpx>=0.27",
    "mypy>=1.11",
    "pgvector>=0.3",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "sentence-transformers>=3.0",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.30",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
files = ["app"]

[[tool.mypy.overrides]]
module = ["pgvector.*"]
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["app*"]
